# dinghy-web

./: .gitignore  README.rst  default.nix  flake.nix  pyproject.toml
.github/workflows/: main.yaml
src/dinghy_web/: __main__.py
src/dinghy_web/templates/: index.html
